131-Lepay: lepay Solve the SDk crash problem
Ticket: XSEVEN-12172 XSEVEN-13198 XSEVEN-12172 LAFITEN-504

Change-Id: I5ab70955aa41e5855aa63fb677c12f7abd955439
Signed-off-by: changjiajie <changjiajie@le.com>

--- a/LePay/AndroidManifest.xml
+++ b/LePay/AndroidManifest.xml
@@ -18,6 +18,7 @@
 
         <activity
             android:name=".LePayEntryActivity"
+            android:configChanges="locale|layoutDirection|fontScale"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent">
