--- a/LetvWallet/AndroidManifest.xml
+++ b/LetvWallet/AndroidManifest.xml
@@ -319,7 +319,13 @@
             android:name=".coupon.activity.CouponDetailActivity"
             android:label="@string/label_coupon"
             android:screenOrientation="portrait"
-            android:theme="@style/CouponTheme" />
+            android:theme="@style/CouponTheme" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="letvwallet" android:host="coupon" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".coupon.activity.CouponListActivity"
             android:label="@string/coupon_list_title_activity"
