--- a/LetvWallet/AndroidManifest.xml
+++ b/LetvWallet/AndroidManifest.xml
@@ -56,6 +56,12 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:scheme="letvwallet" android:host="mainactivity.update"></data>
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="letvwallet" android:host="main.view"></data>
+            </intent-filter>
         </activity>
         <activity
             android:name=".main.WalletMainWebActivity"
