--- a/LetvWallet/AndroidManifest.xml
+++ b/LetvWallet/AndroidManifest.xml
@@ -20,6 +20,7 @@
     <uses-permission android:name="com.letv.android.accountinfo.accessAccountInfo" />
     <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS_PRIVILEGED" />
+    <uses-permission android:name="android.permission.ACCOUNT_MANAGER" />
 
     <permission
         android:name="com.letv.walletbiz.permission.PUSH_RECEIVER"
