131-Lepay: Account : 实名认证流程
未登录乐视账号 返回； 账号登出返回 ；
操作实名认证成功： setResult（OK） 返回；

Ticket: LEUIAPP-263

Change-Id: I2ec44b5a6822fa23ae7ecf890651d9bcf4965da0
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LePay/AndroidManifest.xml
+++ b/LePay/AndroidManifest.xml
@@ -54,7 +54,7 @@
             android:label="@string/account_verify_acitivtiy_title"
             android:theme="@style/AccountVerifyTheme">
             <intent-filter>
-                <action android:name="com.letv.wallet.accountverify" />
+               <action android:name="com.letv.wallet.accountverify" />
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
@@ -81,6 +81,11 @@
         </receiver>
         <!-- wallet common end -->
 
+        <activity
+            android:name=".account.activity.AccountWebActivity"
+            android:label=""
+            android:screenOrientation="portrait"
+            android:theme="@style/SettingWebTheme" />
     </application>
 
 </manifest>
