143-wallet: Set page
Ticket: LEUIAPP-262

Solution:
新增设置页面，
添加实名认证/支付密码条目
根据数据里的认证状态显示，并保存认证状态/和密码设置状态到内存中
点击密码条目时判断保存的认证状态：
  未认证跳转实名认证页面
  已认证判断是否设置密码：
    未设置获取设置密码的URl并跳转
    已设置获取更改密码的URl并跳转

Change-Id: I5a3c9573b07833f84209aa191cf21c40ea8c11cb
Signed-off-by: changjiajie <changjiajie@le.com>

--- a/LePay/AndroidManifest.xml
+++ b/LePay/AndroidManifest.xml
@@ -28,6 +28,23 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".setting.activity.SettingActivity"
+            android:label="@string/setting_label"
+            android:screenOrientation="portrait"
+            android:theme="@style/SettingTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data
+                    android:host="setting"
+                    android:scheme="lepay"></data>
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".setting.activity.SettingWebActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/SettingWebTheme" />
+        <activity
             android:name=".wxapi.WXPayEntryActivity"
             android:exported="true"
             android:screenOrientation="portrait"
@@ -41,7 +58,6 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
-
         <service
             android:name=".account.service.AccountService">
             <intent-filter>
