131-Lepay: Account : 绑卡及卡列表
概要： 添加卡列表界面： 1 本地缓存已开户& 已实名 查询我的卡列表 ；
                        1.1  否则   查询basic & 卡列表
                        1.2  更新basic 账户状态 未开户 去开户
                        1.3  已开户  更新卡列表（由于未实名和已实名， 卡列表都可为空）；
                        1.4  开户失败 无手机号 跳转绑定手机号界面 ； 其他禁用添加卡片

                        2 添加卡片 (无手机号开户失败）跳转绑手机界面 ； 未实名 跳转实名认证 ；否则 跳转添加卡片界面 ；

                        3 删除多余的aidl接口；

                        4 首页开户查询逻辑： 本地已开户& 已实名 查询卡列表： 否则查询basic & cardlist， 返回结果未开户，默认开一次户

Ticket: LEUIAPP-265

Change-Id: I876cd95bd0841fa5648297fb62c31c1e580520ae
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LePay/AndroidManifest.xml
+++ b/LePay/AndroidManifest.xml
@@ -86,6 +86,21 @@
             android:label=""
             android:screenOrientation="portrait"
             android:theme="@style/SettingWebTheme" />
+
+        <activity android:name=".account.activity.CardListActivity"
+            android:label="@string/account_card_title"
+            android:theme="@style/AccountVerifyTheme">
+            <intent-filter>
+                <action android:name="com.letv.wallet.cardlist" />
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".account.activity.RedirectActivity"
+            android:label=""
+            android:screenOrientation="portrait"
+            android:theme="@style/SettingWebTheme" />
     </application>
 
 </manifest>
