131-Lepay: Account : 绑卡及卡列表
添加hideBlankPage ；
跳转绑手机号，实名认证后刷新数据；
修改字体dp 为sp；
添加manifest activity orientation = portrait

Ticket: LEUIAPP-265

Change-Id: I0430585082d6e3c586ff3d9c7427cd4b9dcd8168
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LePay/AndroidManifest.xml
+++ b/LePay/AndroidManifest.xml
@@ -52,7 +52,9 @@
 
         <activity android:name=".account.activity.AccountVerifyActivity"
             android:label="@string/account_verify_acitivtiy_title"
-            android:theme="@style/AccountVerifyTheme">
+            android:theme="@style/AccountVerifyTheme"
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait">
             <intent-filter>
                <action android:name="com.letv.wallet.accountverify" />
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -89,6 +91,7 @@
 
         <activity android:name=".account.activity.CardListActivity"
             android:label="@string/account_card_title"
+            android:screenOrientation="portrait"
             android:theme="@style/AccountVerifyTheme">
             <intent-filter>
                 <action android:name="com.letv.wallet.cardlist" />
