143-wallet: mobile 支持schemeUri跳转
Ticket: LEUIAPP-885

Root cause: 推荐页卡片支持跳转到确认订单页面

Solution: 一 确认订单页面添加scheme，host
	  二 确认订单页面解析schemeUri形式跳转过来时的参数
	  三 MobileProduct的title在初始化时赋值

Change-Id: Ic82e83b1e7f317c3b5ae8536238227612ef0ea64
Signed-off-by: changjiajie <changjiajie@le.com>

--- a/LetvWallet/AndroidManifest.xml
+++ b/LetvWallet/AndroidManifest.xml
@@ -120,6 +120,11 @@
             android:label="@string/mobile_order_view_surelabel"
             android:screenOrientation="portrait"
             android:theme="@style/MobileTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="letvwallet" android:host="MobileOrderConfirmation" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".mobile.activity.MobileOrderDetailActivity"
