143-wallet: add quick payment action for control center
Ticket: LEUIAPP-964

Change-Id: Ief5a5e38e351b3b19474414bdea1b4b8a4988da7
Signed-off-by: liuliang6 <liuliang6@le.com>

--- a/LetvWallet/AndroidManifest.xml
+++ b/LetvWallet/AndroidManifest.xml
@@ -64,6 +64,11 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:scheme="letvwallet" android:host="main.view"></data>
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="com.letv.wallet.quickPayment"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
         </activity>
         <activity
             android:name=".main.WalletMainWebActivity"
