--- a/LetvWallet/AndroidManifest.xml
+++ b/LetvWallet/AndroidManifest.xml
@@ -46,6 +46,7 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/MainTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
