143-wallet: add support for jump to activity from banner
Solution：add db cache,add schema support

Ticket: LEUIAPP-1009

Change-Id: Ie1ddd2c05b0a6f6947ea60bfe91b9b56cb399e4f
Signed-off-by: liuliang6 <liuliang6@le.com>

--- a/LetvWallet/AndroidManifest.xml
+++ b/LetvWallet/AndroidManifest.xml
@@ -234,6 +234,11 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:scheme="movieOrderDetail"></data>
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="letvwallet" android:host="movieOrderDetail" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".movie.activity.MovieDetailActivity"
