143-wallet:修复外部直接跳转电影票之后，按返回的bug
Ticket: LEUIAPP-1038
1)bug原因，电影票的启动模式是singal task，启动时，会新起一个task来显示界面，主界面本身也是一个task，会被掉起，因此返回的时候有两个
2)bug解决：修改电影票的启动模式为singal top，两者在同一个task里面。

Change-Id: I9414e393415f405b4f4a896164ab3b98fe8951bb
Signed-off-by: zhuchuntao <zhuchuntao@le.com>

--- a/LetvWallet/AndroidManifest.xml
+++ b/LetvWallet/AndroidManifest.xml
@@ -164,7 +164,7 @@
         <activity
             android:name=".movie.activity.MovieTicketActivity"
             android:label="@string/label_entity_movie"
-            android:launchMode="singleTask"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/MovieTheme">
             <intent-filter>
