131-Lepay: Optimization payment scheme
Ticket: LEUI-9410

Solution:
添加支付通道选择页面：
  1获取网络列表数据进行填充显示：
     2网络数据错误时：
	3如果有数据用Toast提示网络错误；
	3如果没有数据显示无网络弹框；
点击支付通道：
   1判断数据来源为Boss：使用sdk提供的接口调起相对应支付方式
   1数据来源为金融：
       2未激活加载激活页面：
           3拦截到激活成功地址后请求支付地址：
               4获取成功加载支付收银台：
	           5拦截到支付成功地址后，获取订单的支付状态：
		       6订单状态为已支付，回调支付成功给业务方；
		       6订单状态为失败，弹出支付失败弹框；
	           5获取失败返回到支付列表页更新列表数据；
       2已激活获取对应的支付通道的URL,获取URL后调起WebView
退出账户：退出支付页，返回支付失败给业务方
网络监听：网络连接时本地数据为空时获取支付列表数据

Change-Id: I92f825728a3e6afa250963f6a432e84b2ab37dd1
Signed-off-by: changjiajie <changjiajie@letv.com>

--- a/LePay/AndroidManifest.xml
+++ b/LePay/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.letv.wallet"
+    android:sharedUserId="com.letv.uid.walletpay"
     android:versionCode="10002"
-    android:versionName="1.0.2"
-    android:sharedUserId="com.letv.uid.walletpay">
+    android:versionName="1.0.2">
 
     <uses-sdk
         android:minSdkVersion="23"
@@ -15,15 +15,15 @@
         android:name=".PayApplication"
         android:screenOrientation="portrait"
         android:theme="@android:style/Theme.Translucent">
+
         <activity
-            android:name=".LePayEntryActivity"
+            android:name=".online.activity.LePayEntryActivity"
             android:configChanges="locale|layoutDirection|fontScale"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Translucent">
+            android:theme="@style/LepayEntryTheme">
             <intent-filter>
                 <action android:name="android.intent.action.LE_PAYENTRYACTIVITY" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -45,24 +45,36 @@
             android:label=""
             android:screenOrientation="portrait"
             android:theme="@style/SettingWebTheme" />
+
+        <activity
+            android:name=".online.activity.LePayWebActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Arrow" />
+
+        <activity
+            android:name=".online.activity.LePayWebActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Arrow" />
+
         <activity
             android:name=".wxapi.WXPayEntryActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Translucent"/>
+            android:theme="@android:style/Theme.Translucent" />
 
-        <activity android:name=".account.activity.AccountVerifyActivity"
+        <activity
+            android:name=".account.activity.AccountVerifyActivity"
             android:label="@string/account_verify_acitivtiy_title"
+            android:screenOrientation="portrait"
             android:theme="@style/AccountVerifyTheme"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait">
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
-               <action android:name="com.letv.wallet.accountverify" />
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="com.letv.wallet.accountverify" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <service
-            android:name=".account.service.AccountService">
+
+        <service android:name=".account.service.AccountService">
             <intent-filter>
                 <action android:name="com.letv.wallet.ACTION_SERVICE_LEPAYACCOUNT" />
             </intent-filter>
@@ -90,13 +102,14 @@
             android:screenOrientation="portrait"
             android:theme="@style/SettingWebTheme" />
 
-        <activity android:name=".account.activity.CardListActivity"
+        <activity
+            android:name=".account.activity.CardListActivity"
             android:label="@string/account_card_title"
             android:screenOrientation="portrait"
             android:theme="@style/AccountVerifyTheme">
             <intent-filter>
                 <action android:name="com.letv.wallet.cardlist" />
-                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
