143-wallet: Setting Solve "点击重新加载没有加载框"问题
Ticket: LEUIAPP-1086

Root cause: 没有给按钮设置点击事件，导致没有反应

Solution:
	给”重新加载“按钮设置点击事件
	优化网络数据错误处理逻辑
	删除进入webview时默认的标题

Change-Id: I2144f610cdafbe2d9a77e8c5d96d3720207d0dc2
Signed-off-by: changjiajie <changjiajie@le.com>

--- a/LePay/AndroidManifest.xml
+++ b/LePay/AndroidManifest.xml
@@ -42,6 +42,7 @@
         </activity>
         <activity
             android:name=".setting.activity.SettingWebActivity"
+            android:label=""
             android:screenOrientation="portrait"
             android:theme="@style/SettingWebTheme" />
         <activity
