131-Lepay: Me : 增加有π 余额、还款入口 ; 通知条（横幅引导）
Ticket: LEUIAPP-272 LEUIAPP-278

Root cause : no

Solution:

Change-Id: I30a4915faf264bcb4e722d514bf48e7dfc8a3975
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LetvWallet/AndroidManifest.xml
+++ b/LetvWallet/AndroidManifest.xml
@@ -461,5 +461,9 @@
             android:name=".push.PushWebActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Arrow" />
+        <activity
+            android:name=".me.activity.MeWebActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Arrow" />
     </application>
 </manifest>
