--- a/LetvWalletCommon/build.gradle
+++ b/LetvWalletCommon/build.gradle
@@ -43,6 +43,5 @@ dependencies {
     compile('com.android.support:appcompat-v7:23.2.1')
     compile('com.android.support:design:23.2.1')
     compile('com.android.support:recyclerview-v7:23.2.1')
-    compile(name: 'eui_support_20161226', ext: 'aar')
-    compile(name: 'eui_sdk_20161116', ext: 'aar')
+    compile(name: 'eui_support_v6.0_20170303', ext: 'aar')
 }
