143-wallet: 修改数据埋点的jar包
Ticket: LEUIAPP-276

Change-Id: I8c7ddce721aba4dec984329c8dc0bfa495a8b00e
Signed-off-by: zhuchuntao <zhuchuntao@le.com>

--- a/LetvWalletCommon/build.gradle
+++ b/LetvWalletCommon/build.gradle
@@ -36,7 +36,8 @@ repositories {
     }
 }
 dependencies {
-    compile files('libs/common_agnes_thin_client.jar')
+    compile files('libs/agnes_tracker-0.9.8.jar')
+    compile files('libs/protobuf-java-2.5.0.jar')
     compile files('libs/letv-gson-common.jar')
     compile files('libs/letv-domain-util.jar')
     compile files('libs/libphonenumber.jar')
