131-Lepay: Account: 整理代码
Ticket: LEUIAPP-272

Root cause : no

Solution: 删除redirectActivity ； webactivity添加登录状态判断； 开户后更新tips;

          提取金融H5获取url，进入钱包保存5min；

Change-Id: I3151746bf4cf04dff821944d39b37dc2b225c509
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LetvWallet/AndroidManifest.xml
+++ b/LetvWallet/AndroidManifest.xml
@@ -462,7 +462,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Arrow" />
         <activity
-            android:name=".me.activity.MeWebActivity"
+            android:name=".me.activity.AccountWebActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Arrow" />
     </application>
