143-wallet: 1) add EnvSetting source code; 2) change wallet default environment to product
Ticket: LEUIAPP-1334
Solution:
在tools目录添加EnvSetting目录，放置EnvSetting源码
修改钱包和EnvSetting的默认环境为生产环境

Change-Id: I72aac65f2b9b6f4e335d8699812856b7798e593a
Signed-off-by: huhongbin <huhongbin@le.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':LetvWalletCommon', ':LetvWallet', ':LetvWallet/library/LeuiRecommend', ':LetvWallet/library/letvwalletsigncheck', ':LePay', ':LePay/library/letvpaysigncheck', ':LePay/library/secure'
+include ':LetvWalletCommon', ':LetvWallet', ':LetvWallet/library/LeuiRecommend', ':LetvWallet/library/letvwalletsigncheck', ':LePay', ':LePay/library/letvpaysigncheck', ':LePay/library/secure', ':tools/EnvSetting'
