143-wallet:增加网页的多层跳转功能
Ticket:LEUIAPP-590

Change-Id: Idc89352011ea56c459a4b3e76514513e86563926
Signed-off-by: zhuchuntao <zhuchuntao@le.com>

--- a/LetvWallet/AndroidManifest.xml
+++ b/LetvWallet/AndroidManifest.xml
@@ -414,7 +414,10 @@
             android:name=".member.activity.MemberAgreementActivity"
             android:screenOrientation="portrait"
             android:theme="@style/MemberTheme" />
-
+        <activity
+            android:name="com.letv.wallet.common.activity.BaseWebViewActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Arrow" />
         <!--letv Push -->
         <service android:name=".push.LetvPushIntentService" />
 
