--- a/LetvWalletCommon/build.gradle
+++ b/LetvWalletCommon/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     compile('com.android.support:design:23.2.1')
     compile('com.android.support:recyclerview-v7:23.2.1')
     compile(name: 'eui_support_v6.0_20170303', ext: 'aar')
+    compile 'com.google.android.gms:play-services-analytics:10.0.1'
 }
