--- a/tools/EnvSetting/AndroidManifest.xml
+++ b/tools/EnvSetting/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.letv.wallet.evmsettingapp"
     android:sharedUserId="com.letv.uid.walletpay">
 
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
