143-wallet: GA 增加后台上报
RootCause: no

Solution：no

Ticket: LEUIAPP-359

Change-Id: Ia5174b79986deab6ac9a291f521bb4f10d807808
Signed-off-by: liuliang6 <liuliang6@le.com>

--- a/LetvWallet/AndroidManifest.xml
+++ b/LetvWallet/AndroidManifest.xml
@@ -466,5 +466,19 @@
             android:name=".me.activity.AccountWebActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Arrow" />
+
+        <!-- GA -->
+        <receiver
+            android:name="com.google.android.gms.analytics.AnalyticsReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.analytics.ANALYTICS_DISPATCH"/>
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name="com.google.android.gms.analytics.AnalyticsService"
+            android:enabled="true"
+            android:exported="false"/>
     </application>
 </manifest>
