143-wallet: main：添加火车票入口；所有订单列表添加web订单详情跳转
Ticket:LEUIAPP-270

Root cause:无

Solution: 订单列表item的jump_params为http开头表示为网络订单，跳转响应web页面

Change-Id: Iad44282cb67612b83041dcf7023b6127e67119ba
Signed-off-by: Zhang Huancheng <zhanghuancheng@le.com>

--- a/LetvWallet/AndroidManifest.xml
+++ b/LetvWallet/AndroidManifest.xml
@@ -307,6 +307,13 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".order.activity.OrderDetailWebActivity"
+            android:label="@string/total_order_order_detail"
+            android:screenOrientation="portrait">
+
+        </activity>
+
         <!-- Pay -->
         <activity
             android:name=".base.activity.PayActivity"
