--- a/LetvWalletCommon/build.gradle
+++ b/LetvWalletCommon/build.gradle
@@ -20,7 +20,9 @@ android {
         }
     }
     lintOptions {
-        abortOnError false
+        abortOnError true
+        lintConfig file('lint.xml')
+        disable 'MissingPermission'
     }
     buildTypes {
         release {
