--- a/LePay/AndroidManifest.xml
+++ b/LePay/AndroidManifest.xml
@@ -48,6 +48,7 @@
 
         <activity
             android:name=".online.activity.LePayWebActivity"
+            android:label=""
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Arrow" />
 
