--- a/LetvWalletCommon/build.gradle
+++ b/LetvWalletCommon/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     compile('com.android.support:recyclerview-v7:23.2.1')
     compile(name: 'eui_support_v6.0_20170303', ext: 'aar')
     compile 'com.google.android.gms:play-services-analytics:9.2.0'
+
+    compile project(':LetvWalletCommon/library:secure')
 }
