--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,8 @@
 copyLint()
-include ':LetvWalletCommon', ':LetvWallet', ':LetvWallet/library:LeuiRecommend', ':LetvWallet/library:letvwalletsigncheck', ':LePay', ':LePay/library:letvpaysigncheck', ':LePay/library:secure', './tools:EnvSetting'
+include ':LetvWalletCommon',':LetvWalletCommon/library:secure',
+        ':LetvWallet', ':LetvWallet/library:LeuiRecommend', ':LetvWallet/library:letvwalletsigncheck',
+        ':LePay', ':LePay/library:letvpaysigncheck',
+        './tools:EnvSetting'
 def copyLint() {
     def version = getVersion("lint.xml")
     checkProjectLint("LetvWallet/lint.xml", version, "lint.xml")
